# ultra96v2_xsct_tcl

./: .gitignore  README.md
.metadata/.plugins/org.eclipse.cdt.core/: app_hello.1600773043873.pdom  bsp.1600773039696.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: app_hello.sc
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/app_hello/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/bsp/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/bsp/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/hw/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
app_hello/: .cproject  CMakeLists.txt  armr5_toolchain.cmake
app_hello/src/: freertos_hello_world.c  serial.c
bsp/: .cproject
hw/: .project
